--- a/web/app/themes/lumberjack/views/html-header.twig
+++ b/web/app/themes/lumberjack/views/html-header.twig
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="pingback" href="{{ site.pingback_url }}" />
 
+
+    <link rel="stylesheet" href="/app/themes/lumberjack/build/app.css">
     {{ function('wp_head') }}
 </head>
