--- a/web/app/themes/lumberjack/views/html-footer.twig
+++ b/web/app/themes/lumberjack/views/html-footer.twig
@@ -1,1 +1,3 @@
 {{ function('wp_footer') }}
+<script src="/app/themes/lumberjack/build/runtime.js"></script>
+<script src="/app/themes/lumberjack/build/app.js"></script>
