adding some functionality

--- a/web/app/themes/lumberjack/views/html-footer.twig
+++ b/web/app/themes/lumberjack/views/html-footer.twig
@@ -1,3 +1,5 @@
+<!--    footer function start -->
 {{ function('wp_footer') }}
+<!--    footer function end -->
 <script src="/app/themes/lumberjack/build/runtime.js"></script>
 <script src="/app/themes/lumberjack/build/app.js"></script>
